fast register and z-index andorid bug (work in progress)

--- a/beauty_and_pics/website/static/website/css/bootstrap.css
+++ b/beauty_and_pics/website/static/website/css/bootstrap.css
@@ -6851,7 +6851,7 @@ hr { border-color: #dcdcdc; }
 .breadcrumb > li span.active_label { color: #2c3e50; font-size: 26px; }
 
 /* dropdown inside modal fix */
-.modal .dropdown-menu { z-index: 1051; }
+.modal .dropdown-menu { z-index: 1051; -webkit-transform:translateZ(1051); }
 
 active_label
 /*.nav > li > a, h3, .h3, .alert { margin-left: 5px; margin-right: 5px; }*/
